@@ -5,6 +5,7 @@ Changelog 0.7.1.1
 [SA-00433] MediaPlayer: explorer already remembers the last folder the explorer was in - should also remember the folder depth
 [SA-00427] Sally: (multimedia) keyboard keys should be handled by sally, even when sally don't have the focus (can be turned on / off in the settings)
 + fixed some strange behavior
+[SA-00429] SallyAPI: LPD3DXFONT DrawText Scrolling
 
 
 Changelog 0.7.0.6
